@@ -17,7 +17,7 @@ $(STAMPDIR)/sdcc-extra.fetched: $(ORIGDIR) $(STAMPDIR)
 	cd $(ORIGDIR); \
 	bash -c 'i=0; while ((i < 600)); do { \
 	  ((i += 1)); \
-	    svn $(SVNFLAGS) --force export https://svn.sourceforge.net/svnroot/sdcc/trunk/sdcc-extra sdcc-extra \
+	    svn $(SVNFLAGS) export https://svn.sourceforge.net/svnroot/sdcc/trunk/sdcc-extra sdcc-extra \
 	    && break ; \
 	  echo SVN failed $$i: `date`; \
 	  sleep 1; \
@@ -25,6 +25,8 @@ $(STAMPDIR)/sdcc-extra.fetched: $(ORIGDIR) $(STAMPDIR)
 	touch $@
 
 sdcc-extra:
+	mkdir -p $(SDCCEXTRADIR)
+	#cd $(SDCCEXTRADIR); $(ORIGDIR)/sdcc-extra/configure
 	cd $(SDCCEXTRADIR); ./configure
 	$(MAKE) -C $(SDCCEXTRADIR)
 
