@@ -6,6 +6,7 @@ _DOC_ARCHIVE_BUILDROOT = $(HOME)
 
 _DOC_ARCHIVE_SDCC_DIR = $(SRCDIR)/sdcc
 _DOC_ARCHIVE_DOC_DIR = $(_DOC_ARCHIVE_SDCC_DIR)/doc
+_DOC_ARCHIVE_ORIG_DIR = $(ORIGDIR)/sdcc
 _DOC_ARCHIVE_BUILDDIR = $(TOPDIR)/build/$(TARGETOS)/docs
 _DOC_ARCHIVE_SUPPORT_DIR = $(TOPDIR)/support
 _DOC_ARCHIVE_DIR = $(STAGINGBASE)/$(TARBALLBASE)/docs
@@ -26,9 +27,19 @@ _DOC_ARCHIVE_TMP_HTML_DIRS = $(addprefix $(_DOC_ARCHIVE_BUILDDIR)/,$(_DOC_ARCHIV
 
 _DOC_ARCHIVE_ARCHIVES = sdcc-doc-$(SNAPSHOTID).tar.gz sdcc-doc-$(SNAPSHOTID).zip
 
-.PHONY: build-doc-archive doc-archive-copy doc-archive-copy-pdf doc-archive-copy-tex doc-archive-copy-html doc-archive-build-archives
+.PHONY: doc-archive-configure doc-archive-copy build-doc-archive
+.PHONY: doc-archive-copy doc-archive-copy-pdf doc-archive-copy-tex
+.PHONY: doc-archive-copy-html doc-archive-build-archives
 
-build-doc-archive: doc-archive-build-archives doc-archive-copy do-upload
+#build-doc-archive: fetch-trees doc-archive-configure doc-archive-make doc-archive-build-archives doc-archive-copy do-upload
+build-doc-archive: doc-archive-configure doc-archive-make doc-archive-build-archives doc-archive-copy do-upload
+
+doc-archive-configure:
+	mkdir -p $(_DOC_ARCHIVE_SDCC_DIR)
+	cd $(_DOC_ARCHIVE_SDCC_DIR); $(ORIGDIR)/sdcc/configure --enable-doc > $(NOISELOG)
+
+doc-archive-make $(addprefix $(_DOC_ARCHIVE_DOC_DIR)/,*.txt *.html *.pdf):
+	make -C $(_DOC_ARCHIVE_SDCC_DIR)/doc
 
 doc-archive-copy: doc-archive-copy-txt doc-archive-copy-pdf doc-archive-copy-tex doc-archive-copy-html
 
@@ -48,7 +59,7 @@ doc-archive-copy-html:
 	cd $(_DOC_ARCHIVE_DOC_DIR); \
 	for dir in $(_DOC_ARCHIVE_HTML); do \
 	  find $$dir -maxdepth 1 -type f ! -name "*.html" -exec cp {} $(_DOC_ARCHIVE_BUILDDIR)/$$dir \; ; \
-        done
+	done
 	# Mangle HTML files
 	cd $(_DOC_ARCHIVE_DOC_DIR); \
 	SDCC_SECTION="SDCC Manual"    ; for i in sdccman.html/*.html        ; do $(_DOC_ARCHIVE_SUPPORT_DIR)/sdcc_theme.pl -f $(_DOC_ARCHIVE_SUPPORT_DIR)/sdcc_theme_navbar.html $$i > $(_DOC_ARCHIVE_BUILDDIR)/$$i; done; \
@@ -56,16 +67,22 @@ doc-archive-copy-html:
 	SDCC_SECTION="SDCC CDB Format"; for i in cdbfileformat.html/*.html  ; do $(_DOC_ARCHIVE_SUPPORT_DIR)/sdcc_theme.pl -f $(_DOC_ARCHIVE_SUPPORT_DIR)/sdcc_theme_navbar.html $$i > $(_DOC_ARCHIVE_BUILDDIR)/$$i; done
 	cd $(_DOC_ARCHIVE_BUILDDIR); rsync -vrC --delete -e ssh $(_DOC_ARCHIVE_HTML) shell1.sourceforge.net:$(_PROJECT_DOC_DIR)
 
-doc-archive-build-archives: $(addprefix $(_DOC_ARCHIVE_DOC_DIR)/,*.txt *.html *.pdf z80/* avr/*) \
-		     $(addprefix $(_DOC_ARCHIVE_SDCC_DIR)/,as/* \
+doc-archive-build-archives: $(addprefix $(_DOC_ARCHIVE_DOC_DIR)/,*.txt *.html *.pdf) \
+		     $(addprefix $(_DOC_ARCHIVE_ORIG_DIR)/, doc/z80/* doc/avr/* as/doc/* \
 		     sim/ucsim/doc/*.html sim/ucsim/doc/*.jpg sim/ucsim/doc/*.gif sim/ucsim/doc/*.fig)
 	mkdir -p $(_DOC_ARCHIVE_DIR)
 	rm -rf $(_DOC_ARCHIVE_BUILDDIR)
 	mkdir -p $(_DOC_ARCHIVE_BUILDDIR)/doc/ucsim
 	mkdir -p $(_DOC_ARCHIVE_BUILDDIR)/doc/as
-	cd $(_DOC_ARCHIVE_DOC_DIR); cp -rpf *.txt *.html *.pdf z80/ avr/ $(_DOC_ARCHIVE_BUILDDIR)/doc
-	cd $(_DOC_ARCHIVE_SDCC_DIR); cp -rpf as/doc/* $(_DOC_ARCHIVE_BUILDDIR)/doc/as/
-	cd $(_DOC_ARCHIVE_SDCC_DIR)/sim/ucsim/doc; cp -rpf *.html *.jpg *.gif *.fig $(_DOC_ARCHIVE_BUILDDIR)/doc/ucsim/
+	# copy to build directory
+	cd $(_DOC_ARCHIVE_DOC_DIR); cp -rpf *.txt *.html *.pdf $(_DOC_ARCHIVE_BUILDDIR)/doc
+	cd $(_DOC_ARCHIVE_ORIG_DIR); \
+	cp -rpf doc/z80/* $(_DOC_ARCHIVE_BUILDDIR)/doc/z80/; \
+	cp -rpf doc/avr/* $(_DOC_ARCHIVE_BUILDDIR)/doc/avr/; \
+	cp -rpf as/doc/* $(_DOC_ARCHIVE_BUILDDIR)/doc/as/
+	cd $(_DOC_ARCHIVE_ORIG_DIR)/sim/ucsim/doc; cp -rpf *.html *.jpg *.gif *.fig $(_DOC_ARCHIVE_BUILDDIR)/doc/ucsim/
+	# create tar.gz doc package
 	cd $(_DOC_ARCHIVE_BUILDDIR); tar -czf $(_DOC_ARCHIVE_DIR)/sdcc-doc-$(SNAPSHOTID).tar.gz doc
+	# create zip doc package
 	find $(_DOC_ARCHIVE_BUILDDIR) -name "*.txt" -exec unix2dos {} \;
 	cd $(_DOC_ARCHIVE_BUILDDIR); zip -9r $(_DOC_ARCHIVE_DIR)/sdcc-doc-$(SNAPSHOTID).zip doc
