@@ -1,3 +1,8 @@
+2006-06-15 Borut Razem <borut.razem AT siol.net>
+
+	* components/sdcc.mk, components/sdcc-extra.mk, lib/bootstrap.mk,
+	  lib/doc-archive.mk, lib/variables.mk: preparation for common ORIG tree
+
 2006-06-11 Borut Razem <borut.razem AT siol.net>
 
 	* lib/src-archive.mk, lib/variables.mk: introduced SNAPSHOTID
